# webelement_highlighter

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py  webelement_highlighter.py
.github/workflows/: python-package.yml  python-publish.yml  python-publish2.yml  python-test-and-publish.yml
demo/: highlight_elements.py  make_elements_blink.py
tests/: test_webelement_highlighter.py
webelement_highlighter/: __init__.py
