[metadata]
# replace with your username:
name = webelement_highlighter
version = 0.9.1
author = Roberto Torres
author_email = roberto.torres.dev@gmail.com
description = A simple package to highlight webelements
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rtorres90/webelement_highlighter
project_urls =
    Bug Tracker = https://github.com/rtorres90/webelement_highlighter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.6

[options.packages.find]
where =